--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -34,6 +34,11 @@ a {
   color: inherit;
   text-decoration: none;
 }
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
 
 @media (prefers-color-scheme: dark) {
   html {
