--- a/src/widgets/layout/base-layout/style.module.css
+++ b/src/widgets/layout/base-layout/style.module.css
@@ -4,4 +4,11 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  @media (max-width: 768px) {
+    padding: 0 40px;
+  }
+}
+
+.mainLayout {
+  width: 100%;
 }
